--- a/P3-functions.Rmd
+++ b/P3-functions.Rmd
@@ -51,9 +51,16 @@ Write the function `nthFibonacciNumber(n)` that takes a positive integer `n` and
 - `nthFibonacciNumber(5)` returns `5`
 - `nthFibonacciNumber(6)` returns `8`
 
-### 2) `integerSquareRoot(x)`
+### 2) `kthDigit(x, k)`
 
-Given a non-negative integer `x`, return the integer value that is closest to its square root.  For example, `integerSquareRoot(10)` returns `3`.
+Given two integers, `x` and `k`, return the kth digit of `x`, counting from the right. So:
+
+- `kthDigit(789, 0)` returns `9`
+- `kthDigit(789, 1)` returns `8`
+- `kthDigit(789, 2)` returns `7`
+- `kthDigit(789, 3)` returns `0`
+
+Negative numbers should work, too, so `kthDigit(-789, 0)` returns `9`.
 
 ### 3) `celsiusToFahrenheit(degrees)`
 
@@ -61,15 +68,17 @@ Given a temperature in Celsius, return the same temperature in Fahrenheit.  So `
 
 ### 4) `isPerfectCube(x)`
 
-Given an integer value `x`, returns `TRUE` if it is a perfect cube and `FALSE` otherwise. That is, return `TRUE` if there is another integer `y` such that `x = y^3`.  Thus, `isPerfectCube(27)` returns `TRUE`, but `isPerfectCube(16)` returns `FALSE`.
+Given an integer value `x`, returns `TRUE` if it is a perfect cube and `FALSE` otherwise. That is, return `TRUE` if there is another integer `y` such that `x = y^3`. Thus, `isPerfectCube(27)` returns `TRUE`, but `isPerfectCube(16)` returns `FALSE`.
 
-### 5) `isTriangular(x)`
+### 5) `isTriangularNumber(n)`
 
-A number is triangular if it equals 1+2+3+...+N for some integer N. Given an integer value `x`, return `TRUE` if it is triangular, and `FALSE` otherwise.  Note that this relates to the pool ball problems above.
+A number is triangular if it equals 1+2+3+...+N for some integer N. Given an integer value `n`, return `TRUE` if it is triangular, and `FALSE` otherwise. Note that this relates to the pool ball problems. This is related to the pool ball problems in the homework.
+
+For this problem and the next, you should research [Triangular Numbers](https://en.wikipedia.org/wiki/Triangular_number){target="_blank"}.
 
 ### 6) `triangleArea(x1, y1, x2, y2, x3, y3)`
 
-Given six numeric values representing the points `(x1, y1)`, `(x2, y2)`, and `(x3, y3)`, return the area of the triangle formed by connecting the 3 points.  You may ignore the case where the 3 points are collinear (and so do not form a triangle). Hint:  [Herod's Formula](https://en.wikipedia.org/wiki/Heron%27s_formula).
+Given six numeric values representing the points `(x1, y1)`, `(x2, y2)`, and `(x3, y3)`, return the area of the triangle formed by connecting the 3 points. You may ignore the case where the 3 points are collinear (and so do not form a triangle). Hint: [Herod's Formula](https://en.wikipedia.org/wiki/Heron%27s_formula){target="_blank"}.
 
 ### 7) `dcHour(londonHour)`
 This function takes an integer, the current hour in London, and returns the current hour in Washington DC (which is 5 hours behind London). However, London time is given in 24-hour time (so `londonHour` is between 0 and 23, inclusive), but Washington DC time must be returned in 12-hour time (so the result must be between 1 and 12, inclusive, where "am" and "pm" are ignored). Here are some examples:
