--- a/LICENSE.Rmd
+++ b/LICENSE.Rmd
@@ -21,5 +21,6 @@ EEB313: Quantitative Methods in R for Biology | [U of T Coders](https://uoftcode
 Modern Dive | Chester Ismay & Albert Y. Kim | [course](https://moderndive.netlify.com/); [github](https://github.com/moderndive/moderndive_book)
 Learning statistics with R | Danielle Navarro | [course](https://djnavarro.github.io/tidylsrbook/); [github](https://github.com/djnavarro/rbook)
 R for Psychological Science | Danielle Navarro | [course](https://psyr.org/index.html); [github](https://github.com/djnavarro/psyr)
+What They Forgot to Teach You About R | Jennifer Bryan & Jim Hester | [course](https://whattheyforgot.org/); [github](https://github.com/jennybc/what-they-forgot)
 Software Carpentry | [software-carpentry.org](https://software-carpentry.org/) | [lessons](https://software-carpentry.org/lessons/)
 CMU 15-112: Fundamentals of Programming | [David Kosbie](http://www.kosbie.net/cmu/) & [Kelly Rivers](https://hcii.cmu.edu/people/kelly-rivers)| [Spring 2017 Course](http://www.kosbie.net/cmu/spring-17/15-112/)
