--- a/P2-programming-basics.Rmd
+++ b/P2-programming-basics.Rmd
@@ -1,12 +1,56 @@
 ---
 title: "Practice 2 - Programming Basics"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
 source("knitr_setup.R")
 ```
+
+# Functions
+
+Try out a few common, basic functions to learn what they do and how they work:
+
+- Square root: `sqrt(64)` (you could also do this: `64^0.5`)
+- Exponential: `exp(0)`, `exp(1)`, `exp(-10)`,
+- Natural log: `log(10)`, log(1), `log(0)`, `log(-1)`, `log(exp(2))`
+- Factorial: `factorial(1)`, `factorial(5)`, `factorial(-1)`, `factorial(0)`
+- Round: `round(3.1415)`, `round(3.1415, digits=2)`
+- Absolute value: `abs(-1)`, `abs(1)`
+
+Here's a couple more to foreshadow where we'll be going:
+
+- Type `rep("hello!", 100)` and take a look at the output. What does `rep()` do?
+- Type `hist(x=rnorm(300))` and see what happens. What do you think the `hist()` function does?
+
+# Objects
+
+Make some objects using the following assignments:
+
+```{r}
+w <- 1
+x <- 1
+y <- 2
+z <- 3
+```
+
+Using only these objects, try writing code to answer the following questions:
+
+- Write a statement comparing the magnitude of `z` to `w` that returns `TRUE`
+- Write a statement comparing the magnitude of `x` to `w` that returns `TRUE`
+- Fill in the correct relational operators to make this statement return `TRUE`: `(x __ y) & (z __ y)`
+
+# Data types
+
+Try answering some of these questions **before** running any code - reason through the commands, then run the code and see if you were correct:
+
+- What happens when you try to do math with a string: `"3" / 4`
+- What do you think R will return if we divide infinity by a really big number: `Inf / 10^20`
+- Why doesn't this return `TRUE` (Hint: [read ahead](L3.1-functions.html#7_tips) to find out): `(0.1 + 0.2) == 0.3`
 
 ---
 
