Udpates to description and learning objectives

--- a/syllabus/description-unofficial.Rmd
+++ b/syllabus/description-unofficial.Rmd
@@ -1,1 +1,1 @@
-This course provides a foundation in programming using the [R programming language](https://www.r-project.org/). Emphasis will be on producing clear, robust, and reasonably efficient code using top-down design, informal analysis, and effective testing and debugging. Throughout the course, students will primarily work on individual programming assignments to help practice coding skills. Students will be assessed through quizzes, exams, and a final project. Teaching will involve interactive lectures and recitations with a lot time spent live coding. At the end of the semester, students will demonstrate mastery of the course's topics by working on a 3-week team project. This course assumes no prior programming experience and will prepare students for higher level courses in data analytics.
+This course provides a foundation in programming using the [R programming language](https://www.r-project.org/). Emphasis will be on producing clear, robust, and reasonably efficient code using top-down design, informal analysis, and effective testing and debugging. Throughout the course, students will primarily work on individual programming assignments to help practice problem solving skills, coding skills, and data science skills. Students will be assessed through quizzes, homework assignments, and exams. Teaching will involve interactive lectures with plenty of time spent live coding. This course assumes no prior programming experience and is an ideal preparation for higher level courses in data analytics.
