--- a/P1-getting-started.Rmd
+++ b/P1-getting-started.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Practice 1 - Getting Started"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
